# couchdb_mcp

./: .gitignore  INDEXES.md  LICENSE  QUICKSTART.md  README.md  couchdb_mcp_server.py  example_usage.md  pyproject.toml  requirements.txt  test_connection.py
